[package]
name = "nmea-0183"
version = "0.0.4"
authors = ["o0Ignition0o <jeremy.lempereur@gmail.com>"]
edition = "2018"
description = "An NMEA-0183 sentence parser using nom 5."
repository = "https://github.com/YellowInnovation/nmea-0183"
documentation = "https://docs.rs/nmea-0183/"
keywords = ["nmea", "nmea-0183", "gps", "nom", "parser"]
license = "MIT/Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
nom = "5.0.0"
chrono = "0.4.7"
