[package]
name = "nmea-0183"
version = "0.0.5"
authors = ["o0Ignition0o <jeremy.lempereur@gmail.com>"]
edition = "2018"
description = "An NMEA-0183 sentence parser using nom 5."
repository = "https://github.com/YellowInnovation/nmea-0183"
documentation = "https://docs.rs/nmea-0183/"
keywords = ["nmea", "nmea-0183", "gps", "nom", "parser", "no_std"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
nom = { version = "5.1.0", default-features = false }
chrono = { version = "0.4.7", default-features = false }
arrayvec = { version = "0.5", default-features = false }
